Fixing issues with content

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -368,7 +368,6 @@ To view your notification preferences, \action{tap} on the \keys{Settings} butto
 \appscreenshot{Answer}{Billing Notifcation}{fig:answer}
 \appscreenshot{Answers}{Billing Notifcation}{fig:answers}
 \subsection{Viewing groups}
-\label{sec:group-view}
 
 \subsection{Searching groups}
 \label{sec:group-search}
@@ -400,7 +399,7 @@ To leave a group, \action{tap} on the community that you wish to leave on \Scree
 
 \subsection{Joining an event}
 \label{sec:event-join}
-The only way to join a event is to be invited to a event.  To view your invitations, \action{tap} on the \keys{Notifications} button on the \quicknav. On \Screenshot{Notifications} (Figure~\ref{fig:navigation}) you can view all notifications for your account.  \action{Tap} on a event invitation notification to open the \Screenshot{Event View} (Figure~\ref{fig:eventview}).  
+The only way to join a event is to be invited to a event.  To view your invitations, \action{tap} on the \keys{Notifications} button on the \quicknav. On \Screenshot{Notifications} (Figure~\ref{fig:navigation}) you can view all notifications for your account.  \action{Tap} on a event invitation notification to open the \Screenshot{Event View} (Figure~\ref{fig:home}).  
 
 On the \Screenshot{Event View} page you can tap on the \keys{Join} button to join the event. This will mark your intentions to join the event - it does not guarantee that you will successfully join the event. See section ~\ref{sec:event-wait} for more details.   You may not be able to join a event based on your gender or sexual orientation, see section ~\ref{sec:event-req} for more details. You will receive a notification of your intention to join the event, visibile in your \Screenshot{Notifications} (Figure~\ref{fig:navigation}).   When you have successfully joined the event, you will see the event on your \Screenshot{Home} (Figure~\ref{fig:home}), in \Screenshot{Events} (Figure~\ref{fig:events}), and a notification in your \Screenshot{Notifications} (Figure~\ref{fig:notifications}).  
 
