--- a/src/manual.tex
+++ b/src/manual.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,11pt,titlepage]{scrartcl}
+\batchmode
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % LY1 also works
