Moving metadata changes into the manual

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -71,7 +71,7 @@
 %% NEW COMMAND
 %% name of screenshot, caption, label
 \newcommand{\appscreenshot}[3]{
-	\begin{figure}[h!]%	
+	\begin{figure}[ht!]%	
 	\includegraphics[width=4.4cm]{{"../assets/screenshots/#1"}.png}%
 	\centering%
 	\caption{#2}%
@@ -445,7 +445,7 @@ To view a group, \action{tap} on the \textcomp{group} that you wish to view on t
 
 \subsection{Leaving a group}
 \label{sec:group-leave}
-To leave a group, \action{tap} on the community that you wish to leave on \Screenshot{Home} (Figure~\ref{fig:home}). This opens the \Screenshot{Group Details} (Figure~\ref{fig:group}).  Then, while on \Screenshot{Group Details}, \action{tap} on the \keys{Leave} button.  The group will be removed from your \Screenshot{Home} (Figure~\ref{fig:home}).  If you wish to re-join the group, see section \ref{sec:group-join}.
+To leave a group, \action{tap} on the community that you wish to leave on \Screenshot{Home} (Figure~\ref{fig:home}). This opens the \Screenshot{Group Details} (Figure~\ref{fig:group}).  Then, while on \Screenshot{Group Details}, \action{tap} on the \keys{Leave} button.  The group will be removed from your \Screenshot{Home} (Figure~\ref{fig:home}).  If you wish to re-join the group, see section \ref{sec:groups-join}.
 
 \subsection{Creating your group}
 \label{sec:group-create}
